Renamed txweather to txsensor
Conflicts:
	bundles/binding/pom.xml

--- a/bundles/binding/org.openhab.binding.txsensor/.project
+++ b/bundles/binding/org.openhab.binding.txsensor/.project
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>org.openhab.binding.txweather</name>
-	<comment>This is the TXWeather binding of the open Home Automation Bus (openHAB)</comment>
+	<name>org.openhab.binding.txsensor</name>
+	<comment>This is the TXSensor binding of the open Home Automation Bus (openHAB)</comment>
 	<projects>
 	</projects>
 	<buildSpec>
