--- a/bundles/binding/pom.xml
+++ b/bundles/binding/pom.xml
@@ -94,7 +94,7 @@
 	<module>org.openhab.binding.openenergymonitor</module>
     <module>org.openhab.binding.netatmo</module>
     <module>org.openhab.binding.netatmo.test</module>
-    <module>org.openhab.binding.txweather</module>
+    <module>org.openhab.binding.txsensor</module>
   </modules>
 
 </project>
